# favorites-api

./: .pre-commit-config.yaml  Makefile  Procfile  README.md  local.env  pyproject.toml
favorites-api/: .pytest.ini
favorites-api/apps/core/: mixins.py  models.py
favorites-api/apps/favorites/: api.py  models.py  serializers.py
favorites-api/apps/favorites/migrations/: 0001_initial.py
favorites-api/favorites_api/: settings.py  urls.py  wsgi.py
favorites-api/tests/: conftest.py  factories.py
favorites-api/tests/core/: test_commands.py  test_mixins.py
favorites-api/tests/favorites/: test_api.py  test_serializers.py
favorites_api/: manage.py
favorites_api/apps/core/management/commands/: create_user.py  update_password.py
favorites_api/apps/favorites/: api.py  mixins.py  models.py  serializers.py  urls.py
favorites_api/favorites_api/: asgi.py  settings.py  urls.py  wsgi.py
favorites_api/tests/: conftest.py  factories.py
favorites_api/tests/favorites/: test_api.py  test_mixins.py  test_serializers.py
tests/: test_favortes_api.py
